// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/plugins /keyframes.js should leave unknown animation names alone 1`] = `
".a_ { animation: a; }
.b_ { animation-name: b; }"
`;

exports[`/plugins /keyframes.js should update multiple animations properly 1`] = `
"@keyframes a_ {}
@keyframes b_ {}
.c_ { animation: a_ 10s linear, b_ 0.2s infinite; }"
`;

exports[`/plugins /keyframes.js should update scoped animations from the scoping plugin's message 1`] = `
"@keyframes a_ {}
.b_ { animation: a_; }"
`;

exports[`/plugins /keyframes.js should update scoped prefixed animations from the scoping plugin's message 1`] = `
"@-webkit-keyframes a_ {}
.b_ { animation: a_; }"
`;

exports[`/plugins /keyframes.js should update the animation-name property 1`] = `
"@keyframes a_ {}
.b_ { animation-name: a_; }"
`;
